--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@ title: none
 {% if page.url == "/" %}
 
 <!-- Featured
-================================================== -->
-<section class="featured-posts">
+=====<section class="featured-posts">
     <div class="section-title">
         <h2><span>Featured</span></h2>
     </div>
@@ -27,6 +26,7 @@ title: none
 </section>
 
 {% endif %}
+============================================= -->
 
 <!-- Posts Index
 ================================================== -->
