--- a/404.html
+++ b/404.html
@@ -5,6 +5,10 @@ permalink: /404.html
 ---
 
 <div class="text-center">
-<h1 class="display-1 mt-5 mb-4"><span class="badge badge-danger">404</span> Page does not exist!</h1>
-<p>Please use the search bar at the top or visit our <a href="{{site.baseurl}}/">homepage</a>!</p>
+<h1 class="display-1 mt-5 mb-4"><span class="badge badge-danger">Black Hole 404</span></h1>
+<p class="lead">Esta página no existe, se la ha tragado el agujero negro.</p> 
+<p class="lead">Por favor, vuelva por la estela que le trajo hasta este rincón de la galaxia o suba a la nave <a href="{{site.baseurl}}/">por aquí</a>.</p>
+
+<p class="mb-5"><img class="shadow-lg" src="{{site.baseurl}}/assets/images/bh.jpg" alt="black-hole-404" /></p>
+
 </div>
