--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 title: Inicio
 ---
 <div class="jumbotron text-center">
-  <h1><a href="/">Así han sido las elecciones en Elche hasta ahora</a></h1>
-<p class="lead">Publicamos los análisis tras las elecciones de 2019: a partir de las generales y autónomicas del 28A y, sobre todo, de las municipales del 26M. Síguelos en<a href="{{site.baseurl}}/categories#historico">#histórico</a>, <a href="{{site.baseurl}}/categories#discurso">#discurso</a>, <a href="{{site.baseurl}}/categories#redes">#redes</a> y <a href="{{site.baseurl}}/categories#programas">#programas</a>. En <a href="{{site.baseurl}}/categories#resultados">#resultados</a></p>
+  <h1><a href="{{site.baseurl}}/asi-ha-votado-elche/">Así han sido las elecciones en Elche hasta ahora</a></h1>
+<p class="lead">Visualizamos y analizamos los resultados electorales de las 171 secciones censales de Elche en las cuatro últimas elecciones al Congreso de los diputados</p>
 </div>
 
 <section class="recent-posts">
