--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Inicio
 ---
 <div class="jumbotron text-center">
-  <h1><a href="{{site.baseurl}}/asi-ha-votado-elche/">Así han sido las elecciones en Elche hasta ahora</a></h1>
+  <h1><a href="{{site.baseurl}}/asi-ha-votado-elche/">Así han votado tus vecinos ilicitanos en las generales de la última década</a></h1>
 <p class="lead">Visualizamos y analizamos los resultados electorales de las 171 secciones censales de Elche en las cuatro últimas elecciones al Congreso de los diputados</p>
 </div>
 
