nueva entrega muninicipales

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Inicio
 ---
 <div class="jumbotron text-center">
-  <h1><a href="{{site.baseurl}}/el-cambio-calle-a-calle/">Del bipartidismo a los bloques en cada manzana ilicitana</a></h1>
+  <h1><a href="{{site.baseurl}}/bipartidismo-elche/">Del bipartidismo a los bloques en cada manzana ilicitana</a></h1>
 <p class="lead">Aquí están todos los datos de las tres últimas Elecciones Municipales en Elche, calle por calle: un análisis de los bloques de izquierda y derecha, los seis partidos con representación en el Pleno y los datos del Padrón Municipal. Además, repasamos los resultados y la participación de 32 años de votaciones en Elche y desgranamos los programas de las candidaturas al 26M</p>
 </div>
 <section class="recent-posts">
