--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Inicio
 ---
 <div class="jumbotron text-center">
   <h1><a href="{{site.baseurl}}/bipartidismo-recupera-terreno/">El bipartidismo recupera terreno</a></h1>
-<p class="lead">Aquí están todos los datos de las tres últimas Elecciones Municipales en Elche, calle por calle: un análisis de los bloques de izquierda y derecha, los seis partidos con representación en el Pleno y los datos del Padrón Municipal. Además, repasamos los resultados y la participación de 32 años de votaciones en Elche y desgranamos los programas de las candidaturas al 26M</p>
+<p class="lead">El auge del PSOE en la periferia, especialmente en Carrús, y el aguante del PP en el centro y las pedanías vuelve a teñir Elche de rojo y azul tras el 26M</p>
 </div>
 <section class="recent-posts">
 
