--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 title: Inicio
 ---
 <div class="jumbotron text-center">
-  <h1><a href="{{site.baseurl}}/bipartidismo-recupera-terreno/">El bipartidismo recupera terreno</a></h1>
-<p class="lead">El auge del PSOE en la periferia, especialmente en Carrús, y el aguante del PP en el centro y las pedanías vuelve a teñir Elche de rojo y azul tras el 26M</p>
+  <h1><a href="{{site.baseurl}}/así-ganó-terreno-la-derecha-el-10n-en-las-calles-de-elche/">Así ganó terreno la derecha el 10N en las calles de Elche</a></h1>
+<p class="lead">Vox se adueñó de la mayor parte de las secciones censales dominadas por Ciudadanos en el extrarradio ilicitano y el PP ganó terreno al PSOE en el centro de la ciudad en las últimas Elecciones Generales</p>
 </div>
 <section class="recent-posts">
 
