perfiles y post nuecos

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@ layout: default
 title: Inicio
 ---
 <div class="jumbotron text-center">
-  <h1><a href="{{site.baseurl}}/así-ganó-terreno-la-derecha-el-10n-en-las-calles-de-elche/">Así ganó terreno la derecha el 10N en las calles de Elche</a></h1>
-<p class="lead">Vox se adueñó de la mayor parte de las secciones censales dominadas por Ciudadanos en el extrarradio ilicitano y el PP ganó terreno al PSOE en el centro de la ciudad en las últimas Elecciones Generales</p>
+  <h1><a href="{{site.baseurl}}/ninos-en-los-comedores-escolares-de-elche/">Así se alimentan los niños en los comedores escolares de Elche</a></h1>
+<p class="lead">El análisis, plato a plato, de los menús de los 38 colegios ilicitanos refleja excesos en el consumo de carne y carencias en frutas y legumbres
+</p>
 </div>
 <section class="recent-posts">
 
