--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 title: Inicio
 ---
 <div class="jumbotron text-center">
-  <h1><a href="{{site.baseurl}}/ninos-en-los-comedores-escolares-de-elche/">Así se alimentan los niños en los comedores escolares de Elche</a></h1>
-<p class="lead">El análisis, plato a plato, de los menús de los 38 colegios ilicitanos refleja excesos en el consumo de carne y carencias en frutas y legumbres
+  <h1><a href="{{site.baseurl}}/la-restauracion-en-elche-plato-a-plato/">La restauración en Elche, plato a plato</a></h1>
+<p class="lead">El análisis de 214 restaurantes y más de 17.500 platos revela cómo comen los ilicitanos fuera de casa, los precios de la oferta gastronómica, el crecimiento del servicio a domicilio y la expansión de las dietas vegetarianas
 </p>
 </div>
 <section class="recent-posts">
