--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 title: Inicio
 ---
 <div class="jumbotron text-center">
-  <h1><a href="{{site.baseurl}}/la-restauracion-en-elche-plato-a-plato/">La restauración en Elche, plato a plato</a></h1>
-<p class="lead">El análisis de 214 restaurantes y más de 17.500 platos revela cómo comen los ilicitanos fuera de casa, los precios de la oferta gastronómica, el crecimiento del servicio a domicilio y la expansión de las dietas vegetarianas
+  <h1><a href="{{site.baseurl}}/combaten-colegios-contaminacion-respiran-niños-ilicitanos/">Así combaten los colegios la contaminación que respiran los niños ilicitanos</a></h1>
+<p class="lead">Tres centros educativos ofrecen programas medioambientales a alumnos y familias para luchar contra la polución de los vehículos de sus barrios
 </p>
 </div>
 <section class="recent-posts">
