--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 title: Inicio
 ---
 <div class="jumbotron text-center">
-  <h1><a href="{{site.baseurl}}/combaten-colegios-contaminacion-respiran-niños-ilicitanos/">Así combaten los colegios la contaminación que respiran los niños ilicitanos</a></h1>
-<p class="lead">Tres centros educativos ofrecen programas medioambientales a alumnos y familias para luchar contra la polución de los vehículos de sus barrios
+  <h1><a href="{{site.baseurl}}/los-datos-del-misteri/">Los datos del misteri</a></h1>
+<p class="lead">El Misteri es emoción y tradición, pero también se puede representar a partir de sus principales datos. Aquí repasamos algunos de los más importantes, especialmente sobre sus desplazamientos, su trayectoria y el papel de la mujer
 </p>
 </div>
 <section class="recent-posts">
