--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Inicio
 ---
 <div class="jumbotron text-center">
-  <h1><a href="{{site.baseurl}}/los-datos-del-misteri/">Los datos del misteri</a></h1>
+  <h1><a href="{{site.baseurl}}/los-datos-del-misteri/">Los datos del Misteri</a></h1>
 <p class="lead">El Misteri es emoción y tradición, pero también se puede representar a partir de sus principales datos. Aquí repasamos algunos de los más importantes, especialmente sobre sus desplazamientos, su trayectoria y el papel de la mujer
 </p>
 </div>
