--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@ layout: default
 title: Inicio
 ---
 <div class="jumbotron text-center">
-  <h1><a href="{{site.baseurl}}/los-datos-del-misteri/">Los datos del Misteri</a></h1>
-<p class="lead">El Misteri es emoción y tradición, pero también se puede representar a partir de sus principales datos. Aquí repasamos algunos de los más importantes, especialmente sobre sus desplazamientos, su trayectoria y el papel de la mujer
-</p>
+  <h1><a href="{{site.baseurl}}/los-datos-del-28m-en-elche/">Los datos del 28M en Elche</a></h1>
+Las elecciones municipales en Elche, celebradas el pasado 28 de mayo de 2023, se convirtieron en otra gran oportunidad para explotar los datos locales.</p>
 </div>
 <section class="recent-posts">
 
