--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Inicio
 ---
 <div class="jumbotron text-center">
   <h1><a href="{{site.baseurl}}/los-datos-del-28m-en-elche/">Los datos del 28M en Elche</a></h1>
-Las elecciones municipales en Elche, celebradas el pasado 28 de mayo de 2023, se convirtieron en otra gran oportunidad para explotar los datos locales.</p>
+Las elecciones municipales, celebradas el pasado 28 de mayo de 2023, se convirtieron en otra gran oportunidad para explotar los datos locales.</p>
 </div>
 <section class="recent-posts">
 
